fix alignment of featured images and information

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -79,6 +79,7 @@ header {
         display: inline-block;
         vertical-align: middle;
         padding-left: 50px;
+        padding-bottom: 50px;
         width: calc( 100% - 605px);
         margin: 0;
     }
